--- a/Images2WavefrontObj/Images2WavefrontObj.vcxproj
+++ b/Images2WavefrontObj/Images2WavefrontObj.vcxproj
@@ -54,7 +54,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IntDir>$(Configuration)\</IntDir>
-    <IncludePath>D:\Programme\Qt\Qt5.8.0\5.8\msvc2015_64\include;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -97,7 +97,7 @@
       <MinimumRequiredVersion />
     </Link>
     <ClCompile>
-      <AdditionalIncludeDirectories>.\GeneratedFiles;.;D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include;.\GeneratedFiles\$(ConfigurationName);D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtCore;D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtGui;D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtOpenGL;D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtWidgets;.\UI;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include;.\GeneratedFiles\$(ConfigurationName);D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtCore;D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtGui;D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtOpenGL;D:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtWidgets;.\UI;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Disabled</Optimization>
       <OmitFramePointers>false</OmitFramePointers>
       <PreprocessorDefinitions>Q_BYTE_ORDER=Q_LITTLE_ENDIAN;X64;__X64__;__x64__;QT_CORE_LIB;QT_GUI_LIB;QT_OPENGL_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -124,10 +124,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GeneratedFiles\Debug\moc_Images2WavefrontObj.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_Images2WavefrontObj.cpp" />
     <ClCompile Include="GeneratedFiles\Release\moc_Images2WavefrontObj.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
@@ -144,7 +141,7 @@
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc%27ing %(Identity)...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DQ_BYTE_ORDER=Q_LITTLE_ENDIAN -DX64 -D__X64__ -D__x64__ -DQT_CORE_LIB -DQT_GUI_LIB -DQT_OPENGL_LIB -DQT_WIDGETS_LIB  "-I.\GeneratedFiles" "-I." "-ID:\Programme\Qt\5.8.0\5.8\msvc2015_64\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-ID:\Programme\Qt\5.8.0\5.8\msvc2015_64\include\QtCore" "-ID:\Programme\Qt\5.8.0\5.8\msvc2015_64\include\QtGui" "-ID:\Programme\Qt\5.8.0\5.8\msvc2015_64\include\QtOpenGL" "-ID:\Programme\Qt\5.7.0\5.7\winrt_x64_msvc2015\include\QtWidgets" "-ID:\Programme\Qt\5.7.0\5.7\winrt_x64_msvc2015\include\QtANGLE" "-I.\UI"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DQ_BYTE_ORDER=Q_LITTLE_ENDIAN -DX64 -D__X64__ -D__x64__ -DQT_CORE_LIB -DQT_GUI_LIB -DQT_OPENGL_LIB -DQT_WIDGETS_LIB  "-I.\GeneratedFiles" "-I." "-ID:\Programme\Qt\5.8.0\5.8\msvc2015_64\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-ID:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtCore" "-ID:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtGui" "-ID:\Programme\Qt\Qt5.10.1\5.10.1\msvc2017_64\include\QtOpenGL" "-ID:\Programme\Qt\Qt5.10.1\5.10.1\winrt_x64_msvc2017\include\QtWidgets" "-ID:\Programme\Qt\Qt5.10.1\5.10.1\winrt_x64_msvc2017\include\QtANGLE" "-I.\UI"</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Moc%27ing %(Identity)...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
