Updated material handling, adding textures

--- a/Images2WavefrontObj/Images2WavefrontObj.vcxproj
+++ b/Images2WavefrontObj/Images2WavefrontObj.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="ImageProcessing\ImageProcessingFacade.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ImageProcessing\TextureCreator.cpp" />
+    <ClCompile Include="MaterialProcessing\MaterialManager.cpp" />
     <ClCompile Include="UI\Images2WavefrontObj.cpp" />
     <ClCompile Include="ImageProcessing\VertexFinder.cpp" />
     <ClCompile Include="WavefrontObject\MaterialWriter.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="ImageProcessing\ImageProcessingFacade.h" />
     <ClInclude Include="ImageProcessing\VertexFinder.h" />
     <ClInclude Include="ImageProcessing\TextureCreator.h" />
+    <ClInclude Include="MaterialProcessing\MaterialManager.h" />
     <ClInclude Include="WavefrontObject\MaterialWriter.h" />
     <ClInclude Include="WavefrontObject\WavefrontObjectWriter.h" />
     <ClInclude Include="WavefrontObject\Material.h" />
