Fixed sobel edge detection

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Images2WavefrontObj/x64/
 /Images2WavefrontObj/Wavefront/wavefront.obj
 /Images2WavefrontObj/Wavefront/wavefront.mtl
+/Images2WavefrontObj/textures
