Added readable vertex writer

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,5 @@
 /Images2WavefrontObj.VC.db
 /.vs
 /Images2WavefrontObj/x64/
-/Images2WavefrontObj/Wavefront/wavefront.obj
-/Images2WavefrontObj/Wavefront/wavefront.mtl
+/Images2WavefrontObj/Wavefront/
 /Images2WavefrontObj/textures
