--- a/Images2WavefrontObj/Images2WavefrontObj.vcxproj
+++ b/Images2WavefrontObj/Images2WavefrontObj.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="ImageProcessing\TextureCreator.cpp" />
     <ClCompile Include="MaterialProcessing\MaterialManager.cpp" />
     <ClCompile Include="ImageProcessing\NormalCalculator.cpp" />
+    <ClCompile Include="WavefrontObject\ReadableVertexWriter.cpp" />
     <ClCompile Include="UI\Images2WavefrontObj.cpp" />
     <ClCompile Include="ImageProcessing\VertexFinder.cpp" />
     <ClCompile Include="ImageProcessing\VertexAdjuster.cpp" />
@@ -184,6 +185,7 @@
     <ClInclude Include="MaterialProcessing\MaterialManager.h" />
     <ClInclude Include="ImageProcessing\VertexAdjuster.h" />
     <ClInclude Include="ImageProcessing\NormalCalculator.h" />
+    <ClInclude Include="WavefrontObject\ReadableVertexWriter.h" />
     <ClInclude Include="WavefrontObject\MaterialWriter.h" />
     <ClInclude Include="WavefrontObject\WavefrontObjectWriter.h" />
     <ClInclude Include="WavefrontObject\Material.h" />
